update status after each operation
